<resources>
    <string name="app_name">ChronosBox</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Cerca</string>

    <!-- NAvigation -->
    <string name="collapsing_title"></string>
    <string name="categories">CATEGORIES</string>
    <string name="edit">edit</string>
    <string name="back_image">Back Image</string>


    <!-- Register Page -->
    <string name="register_main_text">Registrazione</string>
    <string name="register_main_action">Registrati</string>
    <string name="register_form_email">Email</string>
    <string name="register_form_user">Nome utente</string>
    <string name="register_form_pass">Password</string>
    <string name="register_form_pass_show">Mostra</string>
    <string name="register_already_registered">Già registrato?</string>
    <string name="register_male">Uomo</string>
    <string name="register_female">Donna</string>
    <string name="register_gender">Sesso</string>

    <!-- Login Page -->
    <string name="login_main_text">Login</string>
    <string name="login_main_action">Accedi</string>
    <string name="code_invito_manda">Vai</string>
    <string name="code_skip">Procedi senza</string>
    <string name="login_form_email">Email</string>
    <string name="login_form_user">Nome utente</string>
    <string name="login_form_pass">Password</string>
    <string name="login_new_user">REGISTRATI</string>
    <string name="login_fb_txt">LOGIN con FB</string>
    <string name="logout_fb_txt">LOG OUT</string>
    <string name="login_forgot_pass">DIMENTICATA?</string>

    <!-- Code -->

    <string name="content_description">code</string>

    <!-- Forgot Pass Page -->
    <string name="forgot_main_text">Recupera Password</string>
    <string name="forgot_main_action">Invia</string>
    <string name="forgot_form_email">Email</string>

    <!-- Offer Page -->

    <string name="offer_title_main">Suits</string>
    <string name="dummy_text_short">Lorem ipsum dolor sit amet</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="location">Dove</string>



    <string name="indirizzo">Indirizzo</string>
    <string name="name_shop">Fendy</string>
    <string name="desc_shop">Descrizione</string>


<!-- Edit Text fields -->
    <string name="hint_name">Nome e Cognomne</string>
    <string name="hint_invito">Invito</string>
    <string name="up_string_invito">Hai un invito?</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Registrati</string>
    <string name="err_msg_name">Inserisci il tuo nome completo</string>
    <string name="err_msg_email">Inserisci una mail valida</string>
    <string name="err_msg_password">Inserisci la password</string>
    <string name="err_msg_code">Inserisci il codice</string>
    <string name="profile_form_username">User Name</string>

    <string name="profile_form_phone">Telefono</string>

    <array name="titles">
        <item>"Ciao"</item>
        <item>"Ciao1"</item>
        <item>"Ciao1"</item>
        <item>"Ciuqaio2"</item>
    </array>

    <array name="texts">
        <item>"Ciao"</item>
        <item>"Ciao1"</item>
        <item>"Ciao1"</item>
        <item>"Ciuqaio2"</item>
    </array>

    <string-array name="android_dropdown_arrays">
        <item>uomo</item>
        <item>donna</item>
    </string-array>

    <string name="facebook_app_id">655774177944803</string>

</resources>
