<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/red">

    <RelativeLayout
        android:id="@+id/transparentOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/city_card_no_overlay" />

    <ScrollView
        android:id="@+id/profile_scroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_gravity="center_vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <!--  View Title Label -->

            <!--  Name Label -->

            <!--  Name TextField -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/register_field_height"
                android:layout_marginBottom="@dimen/register_main_text_margin"
                android:layout_marginTop="@dimen/register_main_text_margin"
                android:gravity="center"
                android:hint="@string/register_main_text"
                android:textColor="@color/whitie"
                android:textColorHint="@color/whitie"
                android:textSize="@dimen/VeryBig"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <EditText
                    android:id="@+id/registerName"
                    android:gravity="left"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/register_field_height"
                    android:layout_marginBottom="4dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginLeft="24dp"
                    android:hint="@string/register_form_user"
                    android:inputType="text"
                    android:textColor="@color/whitie"
                    android:textColorHint="@color/whitie" />

                <!--  Email Label -->
                <!--  Email TextField -->

                <EditText
                    android:id="@+id/registerEmail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/register_field_height"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginLeft="24dp"
                    android:hint="@string/register_form_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/whitie"
                    android:textColorHint="@color/whitie" >

                </EditText>
                <!--  Password Label -->
                <!--  Password TextField -->

                <EditText
                    android:id="@+id/registerPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/register_field_height"
                    android:layout_marginRight="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="4dp"
                    android:hint="@string/register_form_pass"
                    android:inputType="textPassword"
                    android:textColor="@color/whitie"
                    android:textColorHint="@color/whitie" />

                <CheckBox
                    android:id="@+id/cbShowPwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/register_form_pass_show"
                    android:textColor="@color/whitie"
                    android:textColorHint="@color/whitie" />

            </LinearLayout>

            <!--  Error message -->

            <TextView
                android:id="@+id/register_error"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/register_space_between_editext"
                android:textColor="#000000"
                android:textSize="@dimen/padding_large"
                android:textStyle="bold" />

            <!--  Login Button
            <Button
                android:id="@+id/btnRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:text="@string/register" />
                -->


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/five_dp"
                android:paddingRight="@dimen/five_dp">

                <RadioGroup
                    android:id="@+id/gender_rg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/male_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_male" />

                    <RadioButton
                        android:id="@+id/female_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/five_dp"
                        android:text="@string/register_female" />

                </RadioGroup>
            </LinearLayout>


            <!--  Link to Login Screen -->

            <Button
                android:id="@+id/btnLinkToLoginScreen"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/register_space_between_editext"
                android:background="@null"
                android:text="@string/register_already_registered"
                android:textColor="@color/white_dark"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/ten_dp"
                android:paddingRight="@dimen/ten_dp">

                <ImageView
                    android:id="@+id/img_Google"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/five_dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:src="@drawable/google" />

                <!--  <com.facebook.login.widget.LoginButton
                      android:id="@+id/login_button"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center_horizontal"
                      android:layout_marginTop="30dp"
                      android:layout_marginBottom="30dp" />-->


                <ImageView
                    android:id="@+id/img_Facebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/five_dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:src="@drawable/fb_new" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/btnRegister"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal|center_vertical"
        android:background="#6000"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register_main_action"
            android:textColor="#ffffff"
            android:textSize="@dimen/register_main_text_action"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>