<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/red"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/transparentOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/city_card_overlay" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00ffffff"
            android:layout_gravity="center_vertical">

            <TextView
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/register_field_height"
                android:layout_marginBottom="@dimen/register_main_text_margin"
                android:layout_marginTop="@dimen/register_main_text_margin"
                android:hint="@string/forgot_main_text"
                android:textColor="@color/whitie"
                android:textColorHint="@color/whitie"
                android:textSize="@dimen/VeryBig"
                android:textStyle="bold" />

            <EditText
                android:gravity="left"
                android:id="@+id/et_Email_forgot"
                android:layout_width="match_parent"
                android:layout_height="@dimen/register_field_height"
                android:layout_marginBottom="4dp"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                android:hint="@string/register_form_email"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_send_email"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal|center_vertical"
        android:background="#6000"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/forgot_main_action"
            android:textColor="#ffffff"
            android:textSize="@dimen/register_main_text_action"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>