<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/upper_title_quiz"
            android:visibility="visible"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:background="@color/indigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/offer_dialog_bar_padding_top"
            android:paddingBottom="@dimen/offer_dialog_bar_padding_bottom">


            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/upper_bar_text1_quiz"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/city_title_padding"
                        android:text="Fashion"
                        android:gravity="center_vertical|right"
                        android:textColor="@color/quiz_title"
                        android:textStyle="bold"
                        android:textSize="@dimen/car_title" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#89969F">

            <!-- <com.android.volley.toolbox.NetworkImageView -->
            <!-- Thumbnail Image   -->
            <ImageView
                android:id="@+id/thumbnail_offer"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:adjustViewBounds="true"
                android:layout_centerInParent="true"
                android:background="@drawable/abitiuomo"
                android:clickable="true"
                android:scaleType="center"/>
            <!--
                android:background="?attr/selectableItemBackgroundBorderless"-->


            <!-- android:scaleType="centerCrop" -->


            <LinearLayout
                android:layout_gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/title_quiz"
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_weight="10"
                    android:layout_height="wrap_content">

                        <TextView
                            android:background="@color/quiz1_overlay"
                            android:gravity="center"
                            android:id="@+id/bar_modal"
                            android:layout_weight="0.9"
                            android:layout_width="0dip"
                            android:layout_height="match_parent"
                            android:paddingLeft="@dimen/city_title_padding"
                            android:text="@string/offer_title_main"
                            android:textColor="@color/quiz_title"
                            android:textStyle="bold"
                            android:textSize="@dimen/article_title_article_page"
                            android:paddingTop="@dimen/offer_dialog_bar_padding_top"
                            android:paddingBottom="@dimen/offer_dialog_bar_padding_bottom" />

                        <TextView
                            android:background="@color/quiz1_overlay"
                            android:id="@+id/bar_modal_title"
                            android:layout_weight="0.6"
                            android:layout_width="0dip"
                            android:layout_height="match_parent"
                            android:text="20 %"
                            android:gravity="center"
                            android:paddingBottom="@dimen/offer_dialog_bar_padding_bottom"
                            android:paddingTop="@dimen/offer_dialog_bar_padding_top"
                            android:textColor="@color/quiz_title"
                            android:textStyle="bold"
                            android:textSize="@dimen/discount_value_article_page"/>

                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

        <ScrollView
            android:layout_below="@+id/upper_offer_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="left">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:textColor="@color/blue"
                        android:textStyle="bold"
                        android:textSize="18dp"
                        android:text="CHECK INSIDE"/>

                </LinearLayout>


                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="#bebebe"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="6dp"
                    />


                <TextView
                    android:id="@+id/content_quiz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_text"
                    android:textSize="@dimen/article_content_article_page"
                    android:textColor="@color/quiz_content"
                    android:layout_marginTop="@dimen/quiz_content_padding_top_bot"
                    android:layout_marginLeft="@dimen/quiz_content_padding_lateral"
                    android:layout_marginRight="@dimen/quiz_content_padding_lateral"
                    android:layout_marginBottom="@dimen/quiz_content_padding_top_bot" />

                <!--
                <TextClock
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="40dp"
                    android:id="@+id/textClock" />
                -->



            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <LinearLayout android:id="@+id/luogoButtonLayout"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@color/indigo"
        android:layout_gravity="center_horizontal|center_vertical"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/luogoPokPage"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="Dove"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/iconMap"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/maps"
            android:paddingRight="8dp"
            android:gravity="right|center_vertical"
            android:contentDescription="@string/indirizzo"/>

    </LinearLayout>

</RelativeLayout>